# Guilt-3P

./: .gitignore  LICENSE  README.md  pyproject.toml  tracker.py
app/: main.py  state.py
data/: nagging.py
roast_modules/: log_shame.py  roaster_speaker.py  send_nag.py
src/guilt_3p/: config.py  main.py
src/guilt_3p.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/guilt_3p/assets/extension/: manifest.json
src/guilt_3p/roast_modules/: roaster_speaker.py
src/guilt_3p/utils/: break_input.py
utils/: break_input.py  get_active_windows.py
